--- a/.gitmodules
+++ b/.gitmodules
@@ -43,7 +43,6 @@
 [submodule "extern/netcdf-cxx4"]
 	path = extern/netcdf-cxx4/netcdf-cxx4
 	url = https://github.com/Unidata/netcdf-cxx4/
-ad
 [submodule "extern/dhbv2/dhbv2"]
 	path = extern/dhbv2/dhbv2
-	url = git@github.com:leoglonz/dhbv2_mts.git
+	url = https://github.com/leoglonz/dhbv2_mts.git
